--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,12 @@
       "es2020",
       "dom"
     ],
+    "paths":{
+      "@components/*": ["src/app/components/*"],
+      "@modules/*": ["src/app/modules/*"],
+      "@services/*": ["src/app/services/*"],
+      "@models/*": ["src/app/models/*"],
+    },
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
