--- a/angular.json
+++ b/angular.json
@@ -34,6 +34,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/dark-theme.scss",
               "src/styles.scss",
               "src/tailwind-styles.scss"
@@ -108,6 +109,7 @@
               "src/assets"
             ],
             "styles": [
+              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/dark-theme.scss",
               "src/styles.scss",
               "src/tailwind-styles.scss"
